@@ -5,18 +5,14 @@ AUX 99-exfat.rules 55 SHA256 2d5408d03d33bcb4baba3f42160364ae92ee0d0408e16f73754
 DIST fuse-exfat-0.9.7.tar.gz 37871 SHA256 7db7035fe25cb46aa4ac553705726b3c0ef1546e60080a59792de9e5b7f5b919 SHA512 19a21d74bfd73647a751bcece6ca8bc1c12dd5f0bf019a7f92b64d67a9b3fa89597effbf15b19059b6e77d61288dc0c6db63500f9f8b9ed6eabd9e59a8501999 WHIRLPOOL 0c0bea8b0647fcd78218fd980a6f17adf61fd6a838a6244216820d129519ec042bdc313642149496c6c476adb557fc92ea6ea3d167956b0b35019a3de8f02310
 DIST fuse-exfat-0.9.8.tar.gz 38286 SHA256 ecae22203461e508d53389617c17d22f68c1b565c700d7663ce67bc4a710e903 SHA512 70b74b896131d41bf7693c7495a99cf943dbaccb61499beb38a474ff09f06213b3ca2ae32907c94795e6f05c3c681ec5db10414283603f666145787e030b1694 WHIRLPOOL 3d45f70833326baa12e245d3304084c239a5feead52a6956b2634c8f1508ceed9a606962e0602b01870fb2106a0544ee0c59803ac2d64018270009fcdc56e4fd
 EBUILD fuse-exfat-0.9.7.ebuild 707 SHA256 9b33fe32789bddb27abb01fee1026bfa3c7f2237e9b1b6d624464e9a0ead15ed SHA512 c37a345c8a0f4f523aabdafc3b31657f90b66f7325002b9f1e7ce37fd71c445296fd892651040bd479949834278dcc36fb33e9ede234e29929f475fed9b10d32 WHIRLPOOL 5c9fb7c9450265a190335d51fb0f1e7e7c59a7ddbd8be96e541f5541ecdfb7dd084ad06ee722f29388dfcd315371c6bb20e8796d2db050f161ac4c0aacd2fdc4
-EBUILD fuse-exfat-0.9.8-r1.ebuild 906 SHA256 a4a6a6466dcda58dbd153e53c27ac272b839f4680433026d4b7de7738ea52b77 SHA512 c6f6b39aefcbafdc12029c074146d01891820089b2c35617fac07120d792dd270d5f1bc48a9cab3104c8e4ab11cc50b90df422a510de04e7ac5fbc8d77cf849e WHIRLPOOL 90cfd9324201bfa3d6d38ec4336cb34b1d5b18c6a3c309c12253d195f676e29a76b3a1efd0a5fb886598d08b7c10811b9aa530fbcf7cb3525d3c4fd238704542
+EBUILD fuse-exfat-0.9.8-r1.ebuild 772 SHA256 4285c0fdde18df72c41b6db48b03df3fb518a62d0414960547fecd7aa7952701 SHA512 dd48316bec467668355c89ba516a4f10d9bcbe27595173f84aa4d51b916671361ea48c951f937a3192ac446c08ab6457d61aa9391ec0090cee4cc5da4a5d7ac2 WHIRLPOOL 2bf6e830758e9fa22a2e7f45b78aecaf7d8e372910132da704ce6b4b01514786c96ee8043467f9196e1357d36abc565e4207d04f359c82c95aa22444bfa3384a
 EBUILD fuse-exfat-0.9.8.ebuild 705 SHA256 f310889d670a64db820635c4bb00957f31d090f01fc8f74454a33482ce37da1e SHA512 90bd2829dabc9a0a5d6b70edbe22c83fc9ead32d52fa4ca44714120e995d2738771a96b0009a29906f4fa896516b7d604f3d410eb0ba4b0960e7754e4a60f6d8 WHIRLPOOL 21f83e0f729dfff1d2a4f32ae5ed359d8abd8e97083065535e01a51654c5c550184c935d894f84bebf79bb2113356277c63d00b7383018a9ee89b15edb419133
-MISC ChangeLog 1140 SHA256 5778146aa17bd492a64adc9a3963fb44b77b1fa4c74a2b40c9d35dcf52e5395a SHA512 4d823debfbb41e072396229d83290f0487c8b64366e6f490ba07a0cf028c2c7995e2130096c41e381c8e428f154d2a9b240ebd27fd36d61429e86cb128100042 WHIRLPOOL 30dd94cbc3427055830688af656424e92b5fb9316db23e0ace0cef924ea7b407f5efb0e2db28fdc1a14e007b81c45b3c1898e51e94d4565dfc21c470f38b8f3f
+MISC ChangeLog 1275 SHA256 4b45c1a90eaeee680bc5a717c01e6cb9fd311b9830409a3fb15c690f996db24b SHA512 a3a4f03afdaddd6a2d34dffba7a5839e30a0985b6aeaeb31955bd8b9f1d9f12196135a83e4c660f3f7be6bd2b5932e9866ccc77a65c6c52fb4fe88ddb64e114d WHIRLPOOL 4cc36dea38efbaf4f8d257bbbbf9af37aafc34cb8347a79ca7abeebd229482770953797a198aca5c870f7750d1ad12eed95fc0460bd29b618a902e54f23c8bdd
 MISC metadata.xml 338 SHA256 317a755d9c1030ff5a40e94154d052ed14e6bb0894287805319804eef05df68a SHA512 0067c955d38e87f0502dc6ac2bc8b9f50625d84d66e7d316109125685c05cc9de8d062058b78c26a784ceb97c5ad42b3e70efcdf36911a5060551b97b25fc736 WHIRLPOOL 0ddb58db1c9bcaf942b277f2092d07dfc0f08a4dffc75a6fe25dfc1739e83129c0cce8ebc11ab4fef8bbd473432373e8f7c8a0a8738066a9dd7f37fa115fb78e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQgRzAAAoJEEdUh39IaPFNPe4H/3R3SrG4mbiF/bBASmwRHmbi
-dDldIfzpYkFSHzy8haJI9IqaiVnO+KWajksTSOZOmZDDfqSnGkRVMBKd3HShHPKy
-wF1q58cMEVMCpp22l6qy4mwg84EoMIkGygMX3g6797tLGNHHfIGEois/sJmdo2do
-hI4g8stQQVbUNoDkwtd1XnnkV1vsypKixkp9y9jRbWJ+UnSj0YohdGI72uNI9HDO
-/KrKT57jNcwDn/WcP2EjCx7U+bx9AjF7jgJwoYcqQTGOmlAo0JDYUYvZVQz7E75Y
-sS1uBUos7eyxD/iotVmd5l5Xh38AK6R/4P7wokpxeBCS/Bo5rIFstgYW4pr2uDI=
-=zD93
+iF4EAREIAAYFAlDHet8ACgkQ2ugaI38ACPCNpAD/ZET6v1vNoG2htGezETpUbdQE
+30THm9ojVdxIobZ9mCwA/3NGwAjkYgSNEyctJDZuEEXHsuN8f+CZsEjwZlnrXeye
+=JVnL
 -----END PGP SIGNATURE-----
