@@ -1,9 +1,9 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse-exfat/fuse-exfat-0.9.8-r1.ebuild,v 1.2 2012/10/19 09:30:05 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse-exfat/fuse-exfat-0.9.8-r1.ebuild,v 1.3 2012/12/11 18:26:24 axs Exp $
 
 EAPI=4
-inherit scons-utils toolchain-funcs
+inherit scons-utils udev toolchain-funcs
 
 DESCRIPTION="exFAT filesystem FUSE module"
 HOMEPAGE="http://code.google.com/p/exfat/"
@@ -30,8 +30,5 @@ src_install() {
 	doman */*.8
 	dodoc ChangeLog
 
-	local udevdir=/lib/udev
-	has_version sys-fs/udev && udevdir="$($(tc-getPKG_CONFIG) --variable=udevdir udev)"
-	insinto "${udevdir}"/rules.d
-	doins "${FILESDIR}"/99-exfat.rules
+	udev_dorules "${FILESDIR}"/99-exfat.rules
 }
