@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/fuse-exfat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse-exfat/ChangeLog,v 1.5 2012/10/19 09:27:42 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse-exfat/ChangeLog,v 1.6 2012/12/11 18:26:24 axs Exp $
+
+  11 Dec 2012; Ian Stakenvicius <axs@gentoo.org> fuse-exfat-0.9.8-r1.ebuild:
+  install udev rules with udev.eclass, to support virtual/udev
 
 *fuse-exfat-0.9.8-r1 (19 Oct 2012)
 
